# src/main/java/cl/tenpo/utility/payments/controller/TransactionsController.java
@@ -9,11 +9,9 @@ import javax.transaction.Transactional;
 import javax.validation.Valid;
 
 import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -22,15 +20,15 @@ import cl.tenpo.utility.payments.jpa.entity.Bill;
 import cl.tenpo.utility.payments.jpa.entity.Transaction;
 import cl.tenpo.utility.payments.jpa.entity.Transferencia;
 import cl.tenpo.utility.payments.jpa.entity.Webpay;
-import cl.tenpo.utility.payments.object.dto.ReceiptRequest;
 import cl.tenpo.utility.payments.object.dto.TransactionCheckoutRequest;
-import cl.tenpo.utility.payments.object.dto.TransactionPutRequest;
 import cl.tenpo.utility.payments.object.dto.TransactionRequest;
 import cl.tenpo.utility.payments.object.dto.TransferenciaOrderResponse;
 import cl.tenpo.utility.payments.object.dto.WebpayInitResponse;
+import cl.tenpo.utility.payments.object.vo.PaymentMethod;
 import cl.tenpo.utility.payments.service.BillService;
 import cl.tenpo.utility.payments.service.TransactionService;
 import cl.tenpo.utility.payments.service.TransferenciaService;
+import cl.tenpo.utility.payments.service.UtilityService;
 import cl.tenpo.utility.payments.service.WebpayService;
 import cl.tenpo.utility.payments.util.Http;
 import cl.tenpo.utility.payments.util.Utils;
@@ -50,6 +48,7 @@ public class TransactionsController
 	private final TransactionService transactionService;
 	private final TransferenciaClient transferenciaClient;
 	private final TransferenciaService transferenciaService;
+	private final UtilityService utilityService;
 	private final WebpayClient webpayClient;
 	private final WebpayService webpayService;
 
@@ -58,6 +57,7 @@ public class TransactionsController
 		final TransactionService transactionService,
 		final TransferenciaClient transferenciaClient,
 		final TransferenciaService transferenciaService,
+		final UtilityService utilityService,
 		final WebpayService webpayService,
 		final WebpayClient webpayClient
 	){
@@ -65,19 +65,35 @@ public class TransactionsController
 		this.transactionService = transactionService;
 		this.transferenciaClient = transferenciaClient;
 		this.transferenciaService = transferenciaService;
+		this.utilityService = utilityService;
 		this.webpayService = webpayService;
 		this.webpayClient = webpayClient;
 	}
 
 	private final String ID = "{id:[0-9a-f\\-]{36}}";
-	private final String BILL_ID = "{billId:[0-9a-f\\-]{36}}";
 
 	private final String TRANSACTION_CREATE 	 = "/v1/transactions";
 	private final String TRANSACTION_GET 		 = "/v1/transactions/"+ID;
-	private final String TRANSACTION_PUT 		 = "/v1/transactions/"+ID;
-	private final String TRANSACTION_BILL_DELETE = "/v1/transactions/"+ID+"/bills/"+BILL_ID;
 	private final String TRANSACTION_CHECKOUT    = "/v1/transactions/"+ID+"/checkout";
-	private final String TRANSACITON_RECEIPT 	 = "/v1/transactions/"+ID+"/receipt";
+
+	@GetMapping(TRANSACTION_GET)
+	public Transaction get(@PathVariable("id") final String publicId)
+	{
+		// get transaction and bills
+		final Transaction transaction = transactionService.findByPublicId(publicId).orElseThrow(Http::TransactionNotFound);
+		transaction.setBills(billService.findByTransactionId(transaction.getId()));
+
+		// get payment method
+		if (transaction.getPaymentMethod() != null) {
+			if (transaction.getPaymentMethod().equals(Transaction.WEBPAY)) {
+				transaction.setWebpay(webpayService.findByTransactionId(transaction.getId()).orElse(null));
+			} else if (transaction.getPaymentMethod().equals(Transaction.TRANSFERENCIA)) {
+				transaction.setTransferencia(transferenciaService.findByTransactionId(transaction.getId()).orElse(null));
+			}
+		}
+
+		return transaction;
+	}
 
 	@Transactional
 	@PostMapping(path = TRANSACTION_CREATE, consumes = MediaType.APPLICATION_JSON_VALUE)
@@ -120,84 +136,6 @@ public class TransactionsController
 		return transaction;
 	}
 
-	@GetMapping(TRANSACTION_GET)
-	public Transaction get(@PathVariable("id") final String publicId)
-	{
-		// get transaction and bills
-		final Transaction transaction = transactionService.findByPublicId(publicId).orElseThrow(Http::TransactionNotFound);
-		transaction.setBills(billService.findByTransactionId(transaction.getId()));
-
-		// get payment method
-		if (transaction.getPaymentMethod() != null) {
-			if (transaction.getPaymentMethod().equals(Transaction.WEBPAY)) {
-				transaction.setWebpay(webpayService.findByTransactionId(transaction.getId()).orElse(null));
-			} else if (transaction.getPaymentMethod().equals(Transaction.TRANSFERENCIA)) {
-				transaction.setTransferencia(transferenciaService.findByTransactionId(transaction.getId()).orElse(null));
-			}
-		}
-
-		return transaction;
-	}
-
-	@Transactional
-	@PutMapping(path = TRANSACTION_PUT, consumes = MediaType.APPLICATION_JSON_VALUE)
-	public Transaction put(
-		@PathVariable("id") final String publicId,
-		@RequestBody @Valid final TransactionPutRequest request
-	){
-		// get resources
-		final Transaction transaction = transactionService.getCreatedOrPendingByPublicId(publicId).orElseThrow(Http::TransactionNotFound);
-		final Bill bill = billService.findCreatedByPublicId(request.getBill()).orElseThrow(Http::BillNotFound);
-
-		// get bills
-		final List<Bill> bills = billService.findByTransactionId(transaction.getId());
-
-		// check if already added
-		if (isUtilityDuplicated(bills, bill)) throw Http.ConficDuplicatedIdentifier();
-
-		// check list size
-		if (bills.size() >= 15) throw Http.ConfictMaxSizeReached();
-
-		// update bill
-		bill.setTransactionId(transaction.getId());
-		bill.setStatus(Bill.PENDING);
-		billService.save(bill).orElseThrow(Http::ServerError);
-		bills.add(bill);
-
-		// update transaction
-		transaction.setStatus(Transaction.PENDING);
-		transaction.setAmount(bills.stream().mapToLong(b -> b.getAmount()).sum());
-		transactionService.save(transaction).orElseThrow(Http::ServerError);
-		transaction.setBills(bills);
-
-		return transaction;
-	}
-
-	@Transactional
-	@DeleteMapping(path = TRANSACTION_BILL_DELETE)
-	public Transaction delete(
-		@PathVariable("id") final String transactionPublicId,
-		@PathVariable("billId") final String billPublicId
-	){
-		// get resources
-		final Transaction transaction = transactionService.getPendingByPublicId(transactionPublicId).orElseThrow(Http::TransactionNotFound);
-		final Bill bill = billService.findPendingByPublicIdAndTransactionId(billPublicId, transaction.getId()).orElseThrow(Http::BillNotFound);
-
-		// remove bill from transaction
-		bill.setTransactionId(null);
-		bill.setStatus(Bill.CREATED);
-		billService.save(bill).orElseThrow(Http::ServerError);
-
-		// update transaction
-		final List<Bill> bills = billService.findByTransactionId(transaction.getId());
-		transaction.setBills(bills);
-		transaction.setStatus(bills.size() > 0 ? Transaction.PENDING : Transaction.CREATED);
-		transaction.setAmount(bills.stream().mapToLong(b -> b.getAmount()).sum());
-		transactionService.save(transaction).orElseThrow(Http::ServerError);
-
-		return transaction;
-	}
-
 	@Transactional
 	@PostMapping(path = TRANSACTION_CHECKOUT, consumes = MediaType.APPLICATION_JSON_VALUE)
 	public Transaction checkout(
@@ -205,13 +143,13 @@ public class TransactionsController
 		@RequestBody @Valid final TransactionCheckoutRequest request
 	){
 		// get request transaction
-		final String paymentMethod = Utils.getPaymentMethod(request.getPaymentMethod()).orElseThrow(Http::InvalidPaymentMethod);
+		final PaymentMethod paymentMethod = utilityService.getPaymentMethodById(request.getPaymentMethod()).orElseThrow(Http::InvalidPaymentMethod);
 		final String email = request.getEmail();
 		final Transaction transaction = transactionService.getPendingByPublicId(publicId).orElseThrow(Http::TransactionNotFound);
 
 		// update transaction
 		transaction.setStatus(Transaction.WAITING);
-		transaction.setPaymentMethod(paymentMethod);
+		transaction.setPaymentMethod(paymentMethod.getCode());
 		transaction.setEmail(email);
 		transactionService.save(transaction).orElseThrow(Http::ServerError);
 
@@ -259,38 +197,6 @@ public class TransactionsController
 		return transaction;
 	}
 
-	@PostMapping(TRANSACITON_RECEIPT)
-	public void receipt(
-		@PathVariable("id") final String publicId,
-		@RequestBody @Valid final ReceiptRequest receiptRequest
-	){
-		// TODO
-	}
-
-	/*
-	@PostMapping("/v1/transactions/{id:[0-9a-f\\-]{36}}/receipt")
-	public void receipt(
-		@PathVariable("id") final String publicId,
-		@RequestBody @Valid final ReceiptRequest receiptRequest
-	) {
-		// check captcha
-		recaptchaClient.check(receiptRequest.getRecaptcha()).orElseThrow(BadRequestException::new);
-
-		// get transaction by id and status
-		final Transaction transaction = transactionService.getSucceedByPublicId(publicId).orElseThrow(NotFoundException::new);
-		final Bill bill = billService.findByTransactionId(transaction.getId()).orElseThrow(NotFoundException::new);
-		transaction.setEmail(receiptRequest.getEmail());
-
-		if (transaction.getPaymentMethod().equals(Transaction.WEBPAY)) {
-			final Webpay webpay = webpayService.findByTransactionId(transaction.getId()).orElseThrow(NotFoundException::new);
-			eventPublisher.publishEvent(new SendReceiptWebpayEvent(bill, transaction, webpay));
-
-		} else if (transaction.getPaymentMethod().equals(Transaction.TRANSFERENCIA)) {
-			final Transferencia transferencia = transferenciaService.findByTransactionId(transaction.getId()).orElseThrow(NotFoundException::new);
-			eventPublisher.publishEvent(new SendReceipTransferenciaEvent(bill, transaction, transferencia));
-		}
-	}*/
-
 	private boolean isUtilityDuplicated(final List<Bill> bills, final Bill bill)
 	{
 		return bills.stream().anyMatch(b -> b.getUtilityId().equals(bill.getUtilityId())
@@ -302,4 +208,66 @@ public class TransactionsController
 		return bills.stream().filter(i -> Collections.frequency(bills, i) >1)
 			.findAny();
 	}
+
+//	private final String TRANSACTION_PUT 		 = "/v1/transactions/"+ID;
+//	@Transactional
+//	@PutMapping(path = TRANSACTION_PUT, consumes = MediaType.APPLICATION_JSON_VALUE)
+//	public Transaction put(
+//		@PathVariable("id") final String publicId,
+//		@RequestBody @Valid final TransactionPutRequest request
+//	){
+//		// get resources
+//		final Transaction transaction = transactionService.getCreatedOrPendingByPublicId(publicId).orElseThrow(Http::TransactionNotFound);
+//		final Bill bill = billService.findCreatedByPublicId(request.getBill()).orElseThrow(Http::BillNotFound);
+//
+//		// get bills
+//		final List<Bill> bills = billService.findByTransactionId(transaction.getId());
+//
+//		// check if already added
+//		if (isUtilityDuplicated(bills, bill)) throw Http.ConficDuplicatedIdentifier();
+//
+//		// check list size
+//		if (bills.size() >= 15) throw Http.ConfictMaxSizeReached();
+//
+//		// update bill
+//		bill.setTransactionId(transaction.getId());
+//		bill.setStatus(Bill.PENDING);
+//		billService.save(bill).orElseThrow(Http::ServerError);
+//		bills.add(bill);
+//
+//		// update transaction
+//		transaction.setStatus(Transaction.PENDING);
+//		transaction.setAmount(bills.stream().mapToLong(b -> b.getAmount()).sum());
+//		transactionService.save(transaction).orElseThrow(Http::ServerError);
+//		transaction.setBills(bills);
+//
+//		return transaction;
+//	}
+
+//	private final String BILL_ID = "{billId:[0-9a-f\\-]{36}}";
+//	private final String TRANSACTION_BILL_DELETE = "/v1/transactions/"+ID+"/bills/"+BILL_ID;
+//	@Transactional
+//	@DeleteMapping(path = TRANSACTION_BILL_DELETE)
+//	public Transaction delete(
+//		@PathVariable("id") final String transactionPublicId,
+//		@PathVariable("billId") final String billPublicId
+//	){
+//		// get resources
+//		final Transaction transaction = transactionService.getPendingByPublicId(transactionPublicId).orElseThrow(Http::TransactionNotFound);
+//		final Bill bill = billService.findPendingByPublicIdAndTransactionId(billPublicId, transaction.getId()).orElseThrow(Http::BillNotFound);
+//
+//		// remove bill from transaction
+//		bill.setTransactionId(null);
+//		bill.setStatus(Bill.CREATED);
+//		billService.save(bill).orElseThrow(Http::ServerError);
+//
+//		// update transaction
+//		final List<Bill> bills = billService.findByTransactionId(transaction.getId());
+//		transaction.setBills(bills);
+//		transaction.setStatus(bills.size() > 0 ? Transaction.PENDING : Transaction.CREATED);
+//		transaction.setAmount(bills.stream().mapToLong(b -> b.getAmount()).sum());
+//		transactionService.save(transaction).orElseThrow(Http::ServerError);
+//
+//		return transaction;
+//	}
 }
