# swagger.yml
@@ -14,28 +14,6 @@ tags:
     description: Operaciones de transacciones de pago de cuenta
 paths:
 
-  /utility-payments/v1/categories:
-    get:
-      tags: 
-        - General
-      summary: Lista las categorías de los convenios de pagos de cuenta
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Category'
-              example: 
-                - id: "100"
-                  name: "AGUA"
-                - id: "500"
-                  name: AUTOPISTAS
-                - id: "700"
-                  name: RETAIL
-
   /utility-payments/v1/payment-methods:
     get:
       tags: 
@@ -51,24 +29,58 @@ paths:
                 items:
                   $ref: '#/components/schemas/PaymentMethod'
               example:
-                - "code": "webpay"
+                - "id": 1
                   "name": "Webpay"
                   "private": false
                   "public": true
-                - "code": "transferencia"
+                - "id": 2
                   "name": "Transferencia"
                   "private": false
                   "public": true
-                - "code": "prepaid"
+                - "id": 3
                   "name": "Prepago"
                   "private": true
                   "public": false
 
-  /utility-payments/v1/utilities:
+  /utility-payments/v1/categories:
     get:
       tags: 
         - Utilities
-      summary: Lista los convenios de pago de cuenta
+      summary: Lista las categorías de los convenios de pagos de cuenta
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+              example: 
+                - "id": 1
+                  "name": "Agua"
+                  "utilities": 14
+                - "id": 2
+                  "name": "Luz"
+                  "utilities": 17
+                - "id": 3
+                  "name": "Telecomunicaciones"
+                  "utilities": 30
+
+  /utility-payments/v1/categories/{id}/utilities:
+    get:
+      tags: 
+        - Utilities
+      summary: Lista los convenios de pago de cuenta de una categoría
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: Id de la categoría
+          schema:
+            type : integer
+            format: int64
+            example: 1
       responses:
         200:
           description: successful operation
@@ -82,23 +94,17 @@ paths:
                 - "id": 1
                   "name": "Aguas Andinas"
                   "identifier": "NRO CUENTA, CON DIGITO VERIFICADOR"
-                  "category_id": "100"
-                  "category_name": "AGUA"
                 - "id": 2
                   "name": "ESSBIO"
                   "identifier": "NRO SERVICIO, SIN DIGITO VERIFICADOR"
-                  "category_id": "100"
-                  "category_name": "AGUA"
                 - "id": 15
                   "name": "ENEL DISTRIBUCION"
                   "identifier": "NRO CLIENTE, CON DIGITO VERIFICADOR"
-                  "category_id": "200"
-                  "category_name": "LUZ"
                 - "id": 33
                   "name": "Movistar Hogar"
                   "identifier": "NRO TELEFONO, CON CODIGO DE AREA"
-                  "category_id": "300"
-                  "category_name": "TELEF-TV-INTERNET"
+        404:
+          description: category not found
         500:
           description: internal server error
 
@@ -142,8 +148,6 @@ paths:
                       "id": 71
                       "name": "Vespucio Sur"
                       "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
                 - "id": "56f31b96-1da2-4372-923d-07b8782f2207"
                   "status": "WAITING"
                   "identifier": "12312312"
@@ -154,8 +158,6 @@ paths:
                       "id": 71
                       "name": "Vespucio Sur"
                       "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
         400:
           description: invalid parameteres
         404:
@@ -197,9 +199,6 @@ paths:
                       "id": 71
                       "name": "Vespucio Sur"
                       "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-
                   - "id": "e41564e9-9ea8-4aac-8b2e-969e45631d35"
                     "status": "PENDING"
                     "identifier": "1231233"
@@ -210,8 +209,6 @@ paths:
                       "id": 71
                       "name": "Vespucio Sur"
                       "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
                 "created": "2019-05-09T24:47:02.642887-03:00"
                 "updated": "2019-05-09T24:47:02.642887-03:00"
         400:
@@ -242,147 +239,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionResponse'
-        404:
-          description: resource not found
-        500:
-          description: internal server error
-    put: 
-      tags: 
-        - Transactions
-      summary: Agrega una deuda a la transacción
-      parameters: 
-        - in: path
-          name: id
-          required: true
-          description: Id de la transacción de pago de cuenta
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TransactionPutRequest'
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TransactionResponse'
-              example:
-                "id": "5d615847-3f00-434b-9d2d-fdb329c7da5f"
-                "status": "PENDING"
-                "order": "T20190509224702005"
-                "amount": 20485
-                "bills":
-                  - "id": "0f052b43-1456-445a-9d24-8e71f7e0cdbe"
-                    "status": "PENDING"
-                    "identifier": "1231231"
-                    "amount": 9324
-                    "due_date": "No disponible"
-                    "description": "Deuda total"
-                    "utility":
-                      "id": 71
-                      "name": "Vespucio Sur"
-                      "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-                  - "id": "e41564e9-9ea8-4aac-8b2e-969e45631d35"
-                    "status": "PENDING"
-                    "identifier": "1231233"
-                    "amount": 7638
-                    "due_date": "No disponible"
-                    "description": "Deuda vencida"
-                    "utility":
-                      "id": 71
-                      "name": "Vespucio Sur"
-                      "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-                  - "id": "2382ba91-8c02-4779-b113-d4aef2988bd2"
-                    "status": "PENDING"
-                    "identifier": "1231230"
-                    "amount": 3523
-                    "due_date": "No disponible"
-                    "description": "Deuda vencida"
-                    "utility":
-                      "id": 71
-                      "name": "Vespucio Sur"
-                      "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-                "created": "2019-05-09T24:47:02.642887-03:00"
-                "updated": "2019-05-09T24:47:02.642887-03:00"
-        400:
-          description: invalid parameters
-        404:
-          description: resource not found
-        409:
-          description: conflict error
-        500:
-          description: internal server error
-          
-  /utility-payments/v1/transactions/{id}/bills/{billId}:
-    delete:
-      tags: 
-        - Transactions
-      summary: Elimina una deuda de la transacción
-      parameters: 
-        - in: path
-          name: id
-          required: true
-          description: Id de la transacción de pago de cuenta
-          schema:
-            type: string
-            example: 0f052b43-1456-445a-9d24-8e71f7e0cdbe
-        - in: path
-          name: billId
-          required: true
-          description: Id de la deuda
-          schema:
-            type: string
-            example: 2382ba91-8c02-4779-b113-d4aef2988bd2
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TransactionResponse'
-              example:
-                "id": "5d615847-3f00-434b-9d2d-fdb329c7da5f"
-                "status": "PENDING"
-                "order": "T20190509224702005"
-                "amount": 16962
-                "bills":
-                  - "id": "0f052b43-1456-445a-9d24-8e71f7e0cdbe"
-                    "status": "PENDING"
-                    "identifier": "1231231"
-                    "amount": 9324
-                    "due_date": "No disponible"
-                    "description": "Deuda total"
-                    "utility":
-                      "id": 71
-                      "name": "Vespucio Sur"
-                      "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-
-                  - "id": "e41564e9-9ea8-4aac-8b2e-969e45631d35"
-                    "status": "PENDING"
-                    "identifier": "1231233"
-                    "amount": 7638
-                    "due_date": "No disponible"
-                    "description": "Deuda vencida"
-                    "utility":
-                      "id": 71
-                      "name": "Vespucio Sur"
-                      "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-                "created": "2019-05-09T24:47:02.642887-03:00"
-                "updated": "2019-05-09T24:47:02.642887-03:00"
         404:
           description: resource not found
         500:
@@ -432,9 +288,6 @@ paths:
                       "id": 71
                       "name": "Vespucio Sur"
                       "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
-
                   - "id": "e41564e9-9ea8-4aac-8b2e-969e45631d35"
                     "status": "WAITING"
                     "identifier": "1231233"
@@ -445,8 +298,6 @@ paths:
                       "id": 71
                       "name": "Vespucio Sur"
                       "identifier": "RUT, CON DIGITO VERIFICADOR"
-                      "category_id": "500"
-                      "category_name": "AUTOPISTAS"
                 "webpay":
                   "id": "ce5fa20b-d680-487e-8e17-73be6f0dce31"
                   "status": "WAITING"
@@ -454,34 +305,6 @@ paths:
                   "token": "e715b9b10abd777f0f3a537a9ad69a4c2db9de2ec12666fa889b41d55f7acb1cz"
                 "created": "2019-05-09T24:47:02.642887-03:00"
                 "updated": "2019-05-09T24:47:02.642887-03:00"
-        400:
-          description: invalid parameters
-        404:
-          description: resource not found
-        500:
-          description: internal server error
-
-  /utility-payments/v1/transactions/{id}/receipt:
-    post:
-      tags: 
-        - Transactions
-      summary: Reenvía el comprobante de una transacción de pago de cuenta
-      parameters: 
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-          description: Id de la transacción de pago de cuenta
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ReceiptRequest'
-      responses:
-        200:
-          description: successful operation
         400:
           description: invalid parameters
         404:
@@ -505,29 +328,26 @@ components:
         identifier:
           type: string
           example: "RUT, CON DIGITO VERIFICADOR"
-        category_id:
-          type: string
-          example: 100
-        category_name:
-          type: string
-          example: AGUA
     
     Category:
       type: object
       properties:
         id:
-          type: string
-          example: 100
+          type: integer
+          example: 1
         name:
           type: string
-          example: AGUA
+          example: Agua
+        utilities:
+          type: integer
+          example: 14
     
     PaymentMethod:
       type: object
       properties:
-        code:
-          type: string
-          example: webpay
+        id:
+          type: integer
+          example: 1
         name:
           type: string
           example: Webpay
@@ -579,20 +399,13 @@ components:
           example: 
             - 0f052b43-1456-445a-9d24-8e71f7e0cdbe
             - e41564e9-9ea8-4aac-8b2e-969e45631d35
-
-    TransactionPutRequest:
-      type: object
-      properties:
-        bill:
-          type: string
-          example: 2382ba91-8c02-4779-b113-d4aef2988bd2
           
     TransactionCheckoutRequest:
       type: object
       properties:
         payment_method:
-          type: string
-          example: webpay
+          type: integer
+          example: 1
         email:
           type: string
           example: correo@ejemplo.cl
@@ -658,13 +471,3 @@ components:
         updated:
           type: string
           example: "2019-04-24T10:58:26.140605-04:00"
-    
-    ReceiptRequest:
-      type: object
-      properties:
-        email:
-          type: string
-          example: correo@ejemplo.cl
-        recaptcha:
-          type: string
-          example: "03AOLTBLTVBtniCIGwS_N4XFQAQ3d5vXsQJp8kYLRsDcqhBUEf2mh8onvgXDOJ"
